--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -11,9 +11,15 @@
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center top;
-            background-repeat: repeat-y;
+            background-repeat: no-repeat;
             background-size: cover;
-            background-attachment: fixed;
+            background-attachment: fixed; 
+
+            /*Shorthand - background
+                color > image > position > repeat >[size]> attachment (deixar o size fora da short)
+                 background: black url(imagens/wallpaper002.jpg) center top no-repeat cover fixed; 
+            background-size: cover;*/
+                            
         }
 
         main {
