--- a/exercicios/ex023/tabela001.html
+++ b/exercicios/ex023/tabela001.html
@@ -13,13 +13,15 @@
 
          table {
             width: 400px;
+            height: 400px;
             border-collapse: collapse;
          }
 
          td {
             border: 1px solid black;
             padding: 8px;
-            background-color: gray;
+            text-align: center; /*Alinhamento horizontal do texto*/
+            vertical-align: middle; /*Alinhamento vertical do texto*/
          }
     </style>
 </head>
