Melhorias no desafio

--- a/desafios/d013/desafio-13-03.html
+++ b/desafios/d013/desafio-13-03.html
@@ -12,11 +12,13 @@
         }
 
         table {
-            text-align: center;
+            width: 500px;
+            border-collapse: collapse;
         }
             
         th {
             background-color: #383838;
+            border: 1px solid black;
             color: white;
             padding: 10px;
         }
