--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -10,7 +10,7 @@
     <h1>Teste com iframe</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem nesciunt eveniet odio harum explicabo eum blanditiis maxime. Incidunt facilis maxime quisquam, ut amet velit laudantium vero similique suscipit eligendi sint? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam sequi ea quo sapiente, dolores deleniti neque, minima, accusantium tenetur illum vero nesciunt totam harum aspernatur tempore aperiam optio mollitia blanditiis.</p>
 
-    <iframe src="pag001.html" frameborder="0" height="500" width="500"></iframe>
+    <iframe src="paginas-extras/pag001.html" frameborder="0" height="500" width="500"></iframe>
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, odit atque dolorem reprehenderit, necessitatibus eveniet obcaecati beatae vero esse perspiciatis consequuntur numquam, vel dolore nostrum error libero minus itaque laboriosam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum deserunt possimus architecto tempore, officia praesentium assumenda provident explicabo quo dolores reiciendis molestiae eos, quam at esse mollitia iusto quidem qui.</p>
 </body>
